--- a/Form1.resx
+++ b/Form1.resx
@@ -57,4 +57,29 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAEBAAAAEAIABoBAAAFgAAACgAAAAQAAAAIAAAAAEAIAAAAAAAMAQAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAADQ0NFBAQEJQRDw+ZEQ8PmREPD5kRDw+ZEQ8PmREPD5kRDw+ZEQ8PmREPD5kRDw+ZEQ8PmREP
+        D5kQEBCUDQ0NExEODlkRDg5LAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAEQ4OSxEODlkRDg5cEg4OSAAAAAAAAAAAEBAQcg8PDzMPDw9kAAAAAAAAAAEQEBByDw8Pdw8P
+        D3YVFRUMAAAAABIODkgRDg5cEQ4OXBIODkgAAAAAAAAAABMTE0MPDw/pExMTKAAAAAAAAAAAEg8PRhAQ
+        EE4RERFLAAAABAAAAAASDg5IEQ4OXBEODlwSDg5IAAAAAAAAAAAQDg5uDw8PMxAQEGAAAAAAAAAAARAQ
+        EHEPDw93Dw8PdBUVFQwAAAAAEg4OSBEODlwRDg5cEg4OSAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAABIODkgRDg5cEA4OfQ8NDWQAAAAAAAAAAAAAAAAQEBCRAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAPDQ1kEA4OfREODpcTDg58AAAAABEREQ8PDw+mEBAQ4BAO
+        Dp8AAAABAAAAARAODp8RDw+qDw8PphEREQ8AAAAAEw4OfBEODpcRDg6XEw4OfAAAAAAAAAAAAAAAABAQ
+        EKMAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABMODnwRDg6XEQ4OlhMODnwAAAAAAAAAAAAA
+        AAAUFBQaAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAATDg58EQ4OlhAODm8RDw/BEQ8PqhEP
+        D6oRDw+qEQ8PqhEPD6oRDw+qEQ8PqhEPD6oRDw+qEQ8PqhEPD6oRDw+qEQ8PwRAODm8RDg5cEg4OSAAA
+        AAAAAAAAAAAAABEREQ8PDw8iDw8PIg8PDyIPDw8iDw8PIg8PDyIPDw8iDw8PIhAODm0QEBBOEQ4OWREO
+        DksAAAAAAAAAAA4ODiUQEBC0Dw8Pdw8PD3cPDw93Dw8Pdw8PD3cPDw93Dw8Pdw8PD3cQEBBfAAAABQ0N
+        DRQQEBCUEQ8PmREPD5kPDw+VCwsLFwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAA//8AAIABAAD//wAA//8AAPv/AAD//wAA//8AAPv/AABxjgAAe/4AAH/+AACAAQAA//8AAPv/
+        AACH/wAA//8AAA==
+</value>
+  </data>
 </root>
